[gd_scene load_steps=5 format=3 uid="uid://can4wvc3g3b84"]

[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme_base/label/label_settings_bold.tres" id="1_haxqt"]
[ext_resource type="Script" path="res://src/screens/settings/theme_picker/theme_picker.gd" id="1_io0vq"]
[ext_resource type="Script" path="res://src/ui_components/base/defaults/default_button.gd" id="2_2ccni"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/base/swtich_option_button/switch_option_button.tscn" id="3_ykm8n"]

[node name="ThemePicker" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.178
anchor_bottom = 0.107
offset_right = -341.76
offset_bottom = -115.56
script = ExtResource("1_io0vq")

[node name="Defaut" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Defaut"]
layout_mode = 2
size_flags_horizontal = 3
text = "Themes"
label_settings = ExtResource("1_haxqt")

[node name="OptionButton" parent="Defaut" instance=ExtResource("3_ykm8n")]
unique_name_in_owner = true
layout_mode = 2

[node name="Custom" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Font" type="HBoxContainer" parent="Custom"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Custom/Font"]
layout_mode = 2
size_flags_horizontal = 3
text = "Font color"

[node name="FontColorButton" type="Button" parent="Custom/Font"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Change"
script = ExtResource("2_2ccni")

[node name="Style" type="HBoxContainer" parent="Custom"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Custom/Style"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buttons color"

[node name="StyleColorButton" type="Button" parent="Custom/Style"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Change"
script = ExtResource("2_2ccni")

[node name="Background" type="HBoxContainer" parent="Custom"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Custom/Background"]
layout_mode = 2
size_flags_horizontal = 3
text = "Background color"

[node name="BackgroundColorButton" type="Button" parent="Custom/Background"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Change"
script = ExtResource("2_2ccni")

[node name="ColorPopupPanel" type="PopupPanel" parent="."]
auto_translate_mode = 1
size = Vector2i(400, 526)

[node name="MarginContainer" type="MarginContainer" parent="ColorPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 522.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorPicker" type="ColorPicker" parent="ColorPopupPanel/MarginContainer"]
layout_mode = 2
deferred_mode = true
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
presets_visible = false
metadata/_edit_use_anchors_ = true

[connection signal="item_selected" from="Defaut/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Custom/Font/FontColorButton" to="." method="_on_font_color_button_pressed"]
[connection signal="pressed" from="Custom/Style/StyleColorButton" to="." method="_on_style_color_button_pressed"]
[connection signal="pressed" from="Custom/Background/BackgroundColorButton" to="." method="_on_background_color_button_pressed"]
